# ilqgames_planning

./: .gitignore  CMakeLists.txt  README.md  ilqgames_planningConfig.cmake.in
cmake/config/: ilqgames_planningConfig.cmake
exp/: experiment_notes.md
include/ilqgames_planning/: hand_tcp_point3D.h  line_segment3.h  point_player_3d.h  polyline3.h  proximity_cost_3d.h  quadratic_polyline3_cost.h  receding_horizon_simulator.h  route3_progress_cost.h  types.h
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_0/0/: costs.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_0/1/: costs.txt  cumulative_runtimes.txt  u1.txt  xs.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_0/2/: cumulative_runtimes.txt  u0.txt  u1.txt  xs.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_0/3/: cumulative_runtimes.txt  u1.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_0/4/: cumulative_runtimes.txt  u1.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_0/5/: u0.txt  u1.txt  xs.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_0/6/: u0.txt  u1.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_0/7/: cumulative_runtimes.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_1/0/: xs.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_1/1/: cumulative_runtimes.txt  u0.txt  u1.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_1/2/: cumulative_runtimes.txt  u0.txt  xs.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_1/3/: cumulative_runtimes.txt  u1.txt  xs.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_1/4/: cumulative_runtimes.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_1/5/: cumulative_runtimes.txt  u0.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_10/0/: costs.txt  u0.txt  u1.txt  xs.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_10/1/: costs.txt  cumulative_runtimes.txt  t0.txt  u0.txt  u1.txt  xs.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_10/2/: cumulative_runtimes.txt  u0.txt  u1.txt  xs.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_10/3/: cumulative_runtimes.txt  u0.txt  u1.txt  xs.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_10/4/: cumulative_runtimes.txt  xs.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_10/5/: costs.txt  u0.txt  u1.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_11/0/: costs.txt  u0.txt  u1.txt  xs.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_11/1/: cumulative_runtimes.txt  u0.txt  u1.txt  xs.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_11/2/: cumulative_runtimes.txt  u0.txt  u1.txt  xs.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_11/3/: costs.txt  cumulative_runtimes.txt  u0.txt  u1.txt  xs.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_11/4/: cumulative_runtimes.txt  u0.txt  u1.txt  xs.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_12/0/: costs.txt  u0.txt  u1.txt  xs.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_12/1/: costs.txt  cumulative_runtimes.txt  u0.txt  u1.txt  xs.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_12/2/: cumulative_runtimes.txt  u0.txt  u1.txt  xs.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_12/3/: cumulative_runtimes.txt  u0.txt  u1.txt  xs.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_12/4/: costs.txt  cumulative_runtimes.txt  u0.txt  u1.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_12/5/: cumulative_runtimes.txt  t0.txt  xs.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_2/0/: costs.txt  u0.txt  u1.txt  xs.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_2/1/: costs.txt  cumulative_runtimes.txt  t0.txt  u0.txt  u1.txt  xs.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_2/2/: costs.txt  cumulative_runtimes.txt  u0.txt  u1.txt  xs.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_2/3/: cumulative_runtimes.txt  u0.txt  u1.txt  xs.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_2/4/: cumulative_runtimes.txt  u0.txt  u1.txt  xs.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_2/5/: cumulative_runtimes.txt  u1.txt  xs.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_2/6/: cumulative_runtimes.txt  u0.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_3/0/: costs.txt  u0.txt  u1.txt  xs.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_3/1/: costs.txt  cumulative_runtimes.txt  u0.txt  u1.txt  xs.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_3/2/: cumulative_runtimes.txt  u0.txt  u1.txt  xs.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_3/3/: cumulative_runtimes.txt  u0.txt  u1.txt  xs.txt
logs/hand_tcp_point3D_receding_5/hand_tcp_point3D_receding_5_iter_3/4/: cumulative_runtimes.txt  u0.txt  u1.txt  xs.txt
matlab/: check_polyline_cost_actual_example.mlx  plot3Dpoints.m  test_line_segment3.mlx  test_polyline3.mlx
python/: plot_log_data.py  plotter.py  requirements.txt
src/: main.cpp
src/ilqgames_planning/: hand_tcp_point3D.cpp  line_segment3.cpp  point_player_3d.cpp  polyline3.cpp  proximity_cost_3d.cpp  quadratic_polyline3_cost.cpp  receding_horizon_simulator.cpp  route3_progress_cost.cpp
test/: CMakeLists.txt  test_line_segment3.cpp  test_polyline3.cpp  test_quadratic_cost.cpp
waypoints/hand_tcp_point3D_receding_5/: waypoints.txt
waypoints/hand_tcp_point3D_receding_9/: waypoints.txt
waypoints/hand_tcp_point3D_receding_targetTraj_5/: waypoints.txt
(+9406 files in other folders)
